syntax = "proto3";

package book_service;
option go_package="genproto/book_service";
import "google/protobuf/struct.proto";

message Book {
    string id = 1;
    string isbn = 2;
    string title = 3;
    string cover = 4;
    string author = 5;
    string published = 6;
    int32 pages = 7;
    int32 status = 8; // 0-new, 1-reading, 2-finished,
}

message BookResponse {
    repeated BookData data = 1;
    bool is_ok = 2;
    string message = 3;
  }

message BookData {
    Book book = 1;
    int32 status = 2;
}

message CreateBook {
    string isbn = 1;
}

message UpdateBook {
    string id = 1;
    string isbn = 2;
    string title = 3;
    string cover = 4;
    string author = 5;
    string published = 6;
    int32 pages = 7;
    int32 status = 8; // 0-new, 1-reading, 2-finished,
}

message UpdatePatchBook {
    string id = 1;
    int32 status = 2;
}

message BookPK {
    string id = 1;
}

message BookByTitle {
    string title =1;
}

message BookListRequest{
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message BookListResponse {
    int64 count = 1;
    repeated Book books = 2;
}
