syntax = "proto3";

package book_service;

option go_package = "genproto/book_service";


import "google/protobuf/empty.proto";
import "book.proto";

service BookService {
    rpc Create(CreateBook) returns (OneBookResponse) {};
    rpc GetByID(BookPK) returns (Book) {};
    rpc GetList(BookListRequest) returns (BookResponse) {};
    rpc Update(UpdateBook) returns (Book) {};
    rpc UpdatePatch(UpdatePatchBook) returns (BookResponse) {};
    rpc Delete(BookPK) returns (BookResponse) {};
    rpc GetBookByTitle(BookByTitle) returns (OneBookResponse) {};
}
